[gd_scene load_steps=3 format=3 uid="uid://cfa7lcbrgv3to"]

[ext_resource type="Script" path="res://src/ui/pick_option.gd" id="1_0tf8x"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="2_2jxhf"]

[node name="PickOption" type="Node2D"]
script = ExtResource("1_0tf8x")

[node name="Center" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_2jxhf")

[node name="Panel" type="PanelContainer" parent="Center"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="Center/Panel/VBox"]
layout_mode = 2
text = "Prompt text"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Center/Panel/VBox"]
layout_mode = 2

[node name="SkipButton" type="Button" parent="Center/Panel/VBox"]
layout_mode = 2
text = "Skip"

[connection signal="pressed" from="Center/Panel/VBox/SkipButton" to="." method="_on_skip_button_pressed"]
